# blockchain-protocol

./: .gitignore  Cargo.toml  README.md  next_steps.txt  specs.odt
blockchain_core/: Cargo.toml
blockchain_core/src/: blockchain.rs  lib.rs  miner.rs
blockchain_core/src/blockchain/: account.rs  block.rs  utils.rs
blockchain_core/src/mock/: mock_miner.rs  mock_network.rs  mod.rs
blockchain_core/src/rpc/: client_to_node.rs  mod.rs
client/: Cargo.toml
client/src/: client.rs  main.rs
core/: Cargo.toml  build.rs
core/proto/: clientToNode.proto  p2p.proto
core/src/blockchain/: account.rs
core/src/network/: mod.rs
core/src/rpc/: client_to_node.rs  p2p.rs
node/: Cargo.toml
node/src/: client_to_node_server.rs  main.rs  p2p.rs  p2p_node.rs  p2pclient.rs  p2pserver.rs
src/: blockchain.rs  lib.rs  main.rs  miner.rs  network.rs
src/blockchain/: account.rs  block.rs  utils.rs
