[package]
name = "blockchain_protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
sha256 = "1.5.0"
primitive-types = { version = "0.13.1", features = ["serde_no_std"]  }
rustc-hex = "2.1.0"
uint = "0.10.0"
k256 = "0.13.4"
rand = "0.8.5"   
multimap = "0.10.0"
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"]  }
serde_json = "1.0"

